Moviesite para receitas (conversão)
Opção de busca + adição de filmes (que não fica salvo no servidor)

--- a/staticpages/templates/base.html
+++ b/staticpages/templates/base.html
@@ -23,7 +23,8 @@
             <h1>Receitas do Habib</h1>
             <ul>
                 <p><a href="{% url 'index' %}">Página Inicial</a></p>
-                <p><a href="{% url 'receitas' %}">Receitas</a></p>
+                <p><a href="{% url 'receitas:index' %}">Receitas</a></p>
+                <p><a href="{% url 'about' %}">Sobre</a></p>
             </ul>
         </nav>
     </header>
