--- a/staticpages/templates/staticpages/about.html
+++ b/staticpages/templates/staticpages/about.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Receitas
+Sobre nós
 {% endblock title %}
 
 {% block content %}
-<h2>Receitas</h2>
+<h2>Sobre nós</h2>
 {% endblock content %}
