--- a/staticpages/templates/staticpages/index.html
+++ b/staticpages/templates/staticpages/index.html
@@ -11,8 +11,8 @@ Página Inicial
         <div class="conteudo">
             <h1>COMA BEM COMO NUNCA</h1>
             <p>Esse site contém as melhores receitas do mundo. <BR>Todas criadas (ou não) pelo Habib.</p>
-                <a href="{% url 'receitas' %}">
-                <button type="button"><span></span>Veja todas as receitas</button>
+                
+                <a href="{% url 'receitas:index' %}"class="button"><span></span>Veja todas as receitas</a>
             </a>
         </div>
     </div>
