--- a/static/css/home.css
+++ b/static/css/home.css
@@ -20,7 +20,7 @@
     line-height: 25px;
 }
 
-button{
+.button{
     width: 300px;
     padding: 15px 0;
     text-align: center;
@@ -36,7 +36,7 @@ button{
     transition: all 0.3s ease; 
 }
 
-button:hover {
+.button:hover {
     background: #5a3f00;
     letter-spacing: 0.05em;
     box-shadow: 0 0 35px #5a3f00;
@@ -62,7 +62,7 @@ button:hover {
         font-size: 15px;
     }
 
-    button{
+    .button{
         width: 200px;
         font-size: 15px;
     }
