Ajustes list e about
Estilizando e adicionando conteúdo

--- a/staticpages/templates/base.html
+++ b/staticpages/templates/base.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/header.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/footer.css' %}">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/details.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/sobre.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/list.css' %}">
 </head>
 
 <body>
