--- a/staticpages/templates/staticpages/about.html
+++ b/staticpages/templates/staticpages/about.html
@@ -5,5 +5,17 @@ Sobre nós
 {% endblock title %}
 
 {% block content %}
-<h2>Sobre nós</h2>
+<div class="banner3">
+    <section class="paginaSobre">
+        <article>
+            <h1>Sobre nós</h1>
+            <br><img src="{{ receita.poster_url }}" alt="{{ receita.name}}" class="recipe-image">
+            <p>Bem-vindos ao Receitas do Habib! Nesse site é possível postar receitas, bem como classificá-las de acordo com suas características e
+            comentar nas receitas de outras pessoas. Também existem algumas receitas já postadas por nós!<br></p>
+
+            <h2><br>O que oferecemos</h2>
+            <li>Explore receitas de todo o mundo.</li>
+            <li>Comente, avalie e compartilhe suas experiências.</li>
+            <li>Contribua com suas próprias receitas.</li>
+
 {% endblock content %}
