--- a/receitas/templates/receitas/details.html
+++ b/receitas/templates/receitas/details.html
@@ -1,13 +1,22 @@
-{% extends 'base.html' %} {% block title %} {{ receita.name }} ({{
-  receita.release_year }} {% endblock title %} {% block content %}
-    <h2>Detalhes do Filme {{ receita.name }} ({{ receita.release_year }})</h2>
-    
-    <section class="dados-de-filme">
-      <img src="{{ receita.poster_url }}" alt="Poster do filme {{ receita.name}}" />
-      <ul>
-        <li>Nome: {{ receita.name }}</li>
-        <li>Ano de Lançamento: {{ receita.release_year }}</li>
-      </ul>
-    </section>
-    
+{% extends 'base.html' %} {% block title %} {{ receita.name }} {% endblock title %} {% block content %}
+    <div class="fundo">
+      <section class="paginaReceita">
+          <article>
+              <h1>{{ receita.name }}</h1>
+              <br><img src="{{ receita.poster_url }}" alt="{{ receita.name}}" class="recipe-image">
+              <h2><br> Descriçãozinha</h2>
+              {{ receita.release_year }}
+              <div class="listaDeIng">
+                  <h2>Ingredientes</h2>
+                  <ul>
+                    {{ receita.release_year }}
+                  </ul>
+              </div>
+              <h2>Modo de preparo</h2>
+                    {{ receita.release_year }}
+              <h1>Bon appétit!</h1>
+          </article>
+      </section>
+  </div>
+  
     {% endblock content %}
