--- a/receitas/templates/receitas/index.html
+++ b/receitas/templates/receitas/index.html
@@ -1,25 +1,38 @@
-{% extends 'base.html' %} {% block content %}
-<h2>Todos os Filmes</h2>
-<section>
-  <p>
-    Muitos resultados? <a href="{% url 'receitas:search' %}">Buscar Filmes</a>
-  </p>
-  <p>
-    Não encontrou o filme?
-    <a href="{% url 'receitas:create' %}">Adicionar Novo Filme</a>
-  </p>
-</section>
-{% if receita_list %}
-<section class="lista-de-cards">
-  {% for receita in receita_list %}
-  <article class="card">
-    <a href="{% url 'receitas:details' forloop.counter %}"
-      ><img src="{{ receita.poster_url }}" alt="Poster do filme {{ receita.name}}"
-    /></a>
-    <p>{{ receita.name }} ({{ receita.release_year }})</p>
-  </article>
-  {% endfor %}
-</section>
-{% else %}
-<p>Não foi encontrado nenhum filme.</p>
-{% endif %} {% endblock content %}
+{% extends 'base.html' %} 
+{% block content %}
+  <h2>Todos os Filmes</h2>
+  <section>
+    <p>
+      Muitos resultados? <a href="{% url 'receitas:search' %}">Buscar Filmes</a>
+    </p>
+    <p>
+      Não encontrou o filme?
+      <a href="{% url 'receitas:create' %}">Adicionar Novo Filme</a>
+    </p>
+  </section>
+
+  <body>
+    <div class="banner2">
+    {% if receita_list %}
+      <section class="list-container">
+        <h2>{{ receita.name }}</h2>
+        <ul class="single-list">
+          {% for receita in receita_list %}
+            <li class="single-item">
+              <a href="{% url 'receitas:details' forloop.counter %}">
+                <div class="single-box">
+                  <img src="{{ receita.poster_url }}" alt="{{ receita.name }}" class="recipe-image">
+                  <div class="recipe-title">{{ receita.name }}</div>
+                </div>
+              </a>
+            </li>                                             
+          {% endfor %}
+        </ul>
+      </section>
+    </div>
+  </body>
+  
+  {% else %}
+    <p>Não foi encontrado nenhum filme.</p>
+  {% endif %}
+{% endblock content %}
