CRUD views funcionais sem Django forms

--- a/receitas/templates/receitas/create.html
+++ b/receitas/templates/receitas/create.html
@@ -19,7 +19,7 @@
     <input type="text" name="modo_de_preparo" id="id_modo_de_preparo" />
   </p>
   <p>
-    <label for="id_foto_url">URL do Poster:</label>
+    <label for="id_foto_url">URL da foto da receita:</label>
     <input type="url" name="foto_url" id="id_foto_url" />
   </p>
   <button type="submit">Criar</button>
