--- a/static/css/details.css
+++ b/static/css/details.css
@@ -58,6 +58,32 @@ article p{
     width: 500px;
 }
 
+.button1{
+    width: 150px;
+    padding: 15px 10px;
+    text-align: center;
+    display: block;
+    margin: 0px auto;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 20px;
+    border: 2px solid #000000;
+    background: transparent;
+    color: #333;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.3s ease; 
+}
+
+.button1:hover {
+    background: #787878;
+    letter-spacing: 0.05em;
+    box-shadow: 0 0 35px #000000;
+    transform: scale(1.1);
+    
+}
+
+
 @media screen and (max-width: 800px) {
     .paginaReceita  {
         width: 60%;
