--- a/receitas/templates/receitas/details.html
+++ b/receitas/templates/receitas/details.html
@@ -40,6 +40,9 @@
             <p>Nenhum comentário.</p>
         {% endif %}
     </ul>
+    <hr>
+
+    <a href="{% url 'receitas:comment' post.pk %}"><button>Adicione um comentário</button></a>
 </section>
 
 {% endblock content %}
