Arrumando erros nas views

--- a/receitas/templates/receitas/comment.html
+++ b/receitas/templates/receitas/comment.html
@@ -3,11 +3,11 @@
 {% block content %}
 <h2>Adicionar comentário na receita {{ post.name }}</h2>
 
-<form action="{% url 'receitas:comment' post.id %}" method="post">
+<form action="{% url  'receitas:comment' post_id=post.id %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Postar Comentário</button>
 </form>
 
-<p><a href="{% url 'receitas:details' post.id %}">Voltar para a página da receita</a></p>
+<p><a href="{% url 'receitas:details' pk=post.id %}">Voltar para a página da receita</a></p>
 {% endblock content %}
