Adicionando data e hora

--- a/receitas/templates/receitas/details.html
+++ b/receitas/templates/receitas/details.html
@@ -33,7 +33,7 @@
                     <blockquote>
                         "{{ comment.text }}"
                     </blockquote>
-                    <figcaption>—{{ comment.author }}</figcaption>
+                    <figcaption>—{{ comment.author }} em: {{ comment.date }} </figcaption>
                 </figure>
             {% endfor %}
         {% else %}
