--- a/staticpages/templates/staticpages/about.html
+++ b/staticpages/templates/staticpages/about.html
@@ -13,7 +13,7 @@ Sobre nós
             <p>Bem-vindos ao Receitas do Habib! Nesse site é possível postar receitas, bem como classificá-las de acordo com suas características e
             comentar nas receitas de outras pessoas. Também existem algumas receitas já postadas por nós!<br></p>
 
-            <h2><br>O que oferecemos</h2>
+            <h2><br>O que oferecemos</h2><br>
             <li>Explore receitas de todo o mundo.</li>
             <li>Comente, avalie e compartilhe suas experiências.</li>
             <li>Contribua com suas próprias receitas.</li>
