--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,3 +12,54 @@
     background-size: cover;
     background-position: center;
   }
+
+  .titulocategoria h2{
+    text-align: center;
+  }
+
+  .button{
+    width: 300px;
+    padding: 15px 0;
+    text-align: center;
+    margin: 20px 10px;
+    border-radius: 25px;
+    font-weight: bold;
+    font-size: 20px;
+    border: 2px solid #5a3f00;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.3s ease; 
+}
+
+.button:hover {
+    background: #5a3f00;
+    letter-spacing: 0.05em;
+    box-shadow: 0 0 35px #5a3f00;
+    transform: scale(1.1);
+    
+}
+
+.button2{
+  width: 150px;
+  padding: 15px 10px;
+  text-align: center;
+  display: block;
+  margin: 0px auto;
+  border-radius: 20px;
+  font-weight: bold;
+  font-size: 20px;
+  border: 2px solid #5a3f00;
+  background: transparent;
+  color: white;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all 0.3s ease; 
+}
+
+.button2:hover {
+  background: #5a3f00;
+  box-shadow: 0 0 35px #5a3f00;
+  transform: scale(1.1);
+}
