--- a/staticpages/templates/base.html
+++ b/staticpages/templates/base.html
@@ -26,6 +26,7 @@
             <ul>
                 <p><a href="{% url 'index' %}">Página Inicial</a></p>
                 <p><a href="{% url 'receitas:index' %}">Receitas</a></p>
+                <p><a href="{% url 'receitas:categories' %}">Categorias</a></p>
                 <p><a href="{% url 'about' %}">Sobre</a></p>
             </ul>
         </nav>
