--- a/receitas/templates/receitas/details.html
+++ b/receitas/templates/receitas/details.html
@@ -2,6 +2,15 @@
     <div class="fundo">
       <section class="paginaReceita">
           <article>
+            {% if post.category_set.all %}
+
+            <div class="catdet">
+                <h3>Categorias</h3>
+                {% for category in post.category_set.all %}
+                <a href="{% url 'receitas:category' category.id %}"><li>{{ category.name }} (por {{category.author}}) </li></a>
+                {% endfor %}
+            {% endif %}
+            </div>
               <h1>{{ post.name }}</h1>
               <br><img src="{{ post.foto_url }}" alt="{{ post.name}}" class="recipe-image">
               <h2><br> Descriçãozinha</h2>
