--- a/static/css/details.css
+++ b/static/css/details.css
@@ -83,6 +83,10 @@ article p{
     
 }
 
+.catdet h3{
+    text-align: center;
+    font-size: 20px;
+}
 
 @media screen and (max-width: 800px) {
     .paginaReceita  {
