adicionando data no post

--- a/receitas/templates/receitas/details.html
+++ b/receitas/templates/receitas/details.html
@@ -25,6 +25,7 @@
               <h2>Modo de preparo</h2>
                     {{ post.modo_de_preparo }}
               <h1>Bon appétit!</h1>
+              <h2>(Publicado em: {{post.date}}) </h2>
               <br>
               <a href="{% url 'receitas:update' post.id %}"class="button1"><span></span>Editar</a>
               <br><a href="{% url 'receitas:delete' post.id %}"class="button1"><span></span>Apagar</a>
