Modificando header e footer

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,6 +1,6 @@
 
 footer {
-    background-color: #323232;
+    background-color: rgb(71, 17, 100);
     display: flex;
     flex-direction: column;
     color: #fff;
