--- a/staticpages/templates/base.html
+++ b/staticpages/templates/base.html
@@ -22,11 +22,11 @@
 <body>
     <header>
         <nav>
-            <h1>Receitas do Habib</h1>
+            <a href="{% url 'index' %}"> <img src="{% static 'images/LogoVetorizado.svg' %}">
             <ul>
                 <p><a href="{% url 'index' %}">Página Inicial</a></p>
-                <p><a href="{% url 'receitas:index' %}">Receitas</a></p>
-                <p><a href="{% url 'receitas:categories' %}">Categorias</a></p>
+                <p><a href="{% url 'receitas:index' %}">Rolês</a></p>
+                <p><a href="{% url 'receitas:categories' %}">Busca</a></p>
                 <p><a href="{% url 'about' %}">Sobre</a></p>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
 
     <footer>
         <p>Copyright 2023.</p>
-        <p>Feito por Danilo Dacca</p>
+        <p>URolê ©</p>
     </footer>
 </body>
 
