CSS: home, roles. Imagens e início da aba search

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,7 @@
     border-radius: 25px;
     font-weight: bold;
     font-size: 20px;
-    border: 2px solid #5a3f00;
+    border: 2px solid rgb(71, 17, 100);
     background: transparent;
     color: white;
     cursor: pointer;
@@ -34,11 +34,9 @@
 }
 
 .button:hover {
-    background: #5a3f00;
-    letter-spacing: 0.05em;
-    box-shadow: 0 0 35px #5a3f00;
-    transform: scale(1.1);
-    
+    background: rgb(71, 17, 100);
+    box-shadow: 0 0 35px rgb(71, 17, 100);
+    transform: scale(1.1); 
 }
 
 .button2{
@@ -50,7 +48,7 @@
   border-radius: 20px;
   font-weight: bold;
   font-size: 20px;
-  border: 2px solid #5a3f00;
+  border: 2px solid rgb(71, 17, 100);
   background: transparent;
   color: white;
   cursor: pointer;
@@ -60,6 +58,11 @@
 
 .button2:hover {
   background: rgb(36, 17, 73);
-  box-shadow: rgb(36, 17, 73) #5a3f00;
+  box-shadow: rgb(36, 17, 73);
   transform: scale(1.1);
 }
+
+.logo {
+  max-width: 10%;
+  height: auto;
+  }
