--- a/receitas/templates/receitas/search.html
+++ b/receitas/templates/receitas/search.html
@@ -1,13 +1,26 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% block content %}
-  <body>
-    <div class="banner2">
+<body>
+<h2>Filtrar Rolês</h2>
+<form action="{% url 'receitas:search' %}">
+    <p>
+       
+        <div class="icon"></div>
+        <div class="input">
+            <input type="text" name="query" id="id_query" />
+        </div>
+    </p>
+    <button type="submit">Buscar</button>
+</form>
+</body>
+
+<div class="banner2">
     {% if post_list %}
       <section class="list-container">
         <br><br>
-        <h2>Receitas</h2>
+        <h2>Resultados</h2>
         <br><br>
-        <a href="{% url 'receitas:create' %}" class="button2">Adicionar Rolê</a>
+        <a href="{% url 'receitas:create' %}" class="button2">Adicionar Nova Receita</a>
         <ul class="single-list">
           {% for post in post_list %}
             <li class="single-item">
@@ -22,18 +35,9 @@
         </ul>
       </section>
     </div>
-  </body>
-  
-  {% else %}
-  <body>
-    <div class="banner2">
-      <section class="list-container">
-        <br><br>
-        <h2>Nenhum rolê foi encontrado...</h2>
-        <br><br>
-        <a href="{% url 'receitas:create' %}" class="button2">Adicionar Rolê</a>
-      </section>
-    </div>
-  </body>
-  {% endif %}
+    {% else %}
+<h2>Não possível achar esse rolê...</h2>
+{% endif %}
+
 {% endblock content %}
+
