--- a/staticpages/templates/staticpages/index.html
+++ b/staticpages/templates/staticpages/index.html
@@ -9,10 +9,10 @@ Página Inicial
 <body>
     <div class="banner">
         <div class="conteudo">
-            <h1>COMA BEM COMO NUNCA</h1>
-            <p>Esse site contém as melhores receitas do mundo. <BR>Todas criadas (ou não) pelo Habib.</p>
+            <h1>ACESSE OS MELHORES ROLÊS COM FACILIDADE.</h1>
+            <p>O melhor aplicativo para comprar e vender ingressos com segurança.</p>
                 
-                <a href="{% url 'receitas:index' %}"class="button"><span></span>Veja todas as receitas</a>
+                <a href="{% url 'receitas:index' %}"class="button"><span></span>Próximos rolês</a>
             </a>
         </div>
     </div>
