--- a/staticpages/templates/staticpages/index.html
+++ b/staticpages/templates/staticpages/index.html
@@ -12,7 +12,7 @@ Página Inicial
             <h1>ACESSE OS MELHORES ROLÊS COM FACILIDADE.</h1>
             <p>O melhor aplicativo para comprar e vender ingressos com segurança.</p>
                 
-                <a href="{% url 'receitas:index' %}"class="button"><span></span>Próximos rolês</a>
+                <a href="{% url 'roles:index' %}"class="button"><span></span>Próximos rolês</a>
             </a>
         </div>
     </div>
