--- a/roles/templates/roles/delete.html
+++ b/roles/templates/roles/delete.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action="{% url 'receitas:delete' role.id %}" method="post">
+<form action="{% url 'roles:delete' role.id %}" method="post">
   {% csrf_token %}
   <div class="fundo">
     <section class="paginaReceita">
         <article>
-            <h2>Você tem certeza que deseja apagar a receita "{{ role.name }}"?</h2>
+            <h2>Você tem certeza que deseja apagar o rolê "{{ role.name }}"?</h2>
             <br><button type="submit" class="button1"><span></span>Apagar</button>
         </article>
     </section>
