--- a/staticpages/templates/base.html
+++ b/staticpages/templates/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        {% block title %}{% endblock %} | Receitas do Habib!
+        {% block title %}{% endblock %} | URolê
     </title>
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
@@ -33,8 +33,8 @@
                     <li><a href="{% url 'login' %}">Log in</a></li>
                 {% endif %}
                 <p><a href="{% url 'index' %}">Página Inicial</a></p>
-                <p><a href="{% url 'receitas:index' %}">Rolês</a></p>
-                <p><a href="{% url 'receitas:search' %}">Busca</a></p>
+                <p><a href="{% url 'roles:index' %}">Rolês</a></p>
+                <p><a href="{% url 'roles:search' %}">Busca</a></p>
                 <p><a href="{% url 'about' %}">Sobre</a></p>
             </ul>
         </nav>
