--- a/static/css/header.css
+++ b/static/css/header.css
@@ -25,10 +25,12 @@ header ul {
 header ul p {
     font-size: 20px;
     display: flex;
+    justify-content: center;
 }
 
 header ul p a {
     display: flex;
+    justify-content: center;
     margin-left: 40px;
     color: #fff;
     text-decoration: white;
@@ -38,7 +40,7 @@ header ul p a {
 }
 
 header ul p a:hover {
-    color: rgb(54, 15, 78);
+    color: rgb(96, 47, 125);
 }
 
 @media screen and (max-width: 800px) {
