--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     text-decoration: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
   .banner{
