--- a/roles/templates/roles/index.html
+++ b/roles/templates/roles/index.html
@@ -16,7 +16,7 @@
             <li class="single-item">
               <a href="{% url 'roles:details' role.id %}">
                 <div class="single-box">
-                  <img src="{{ role.foto_url }}" alt="{{ role.name }}" class="recipe-image">
+                  <img src="{{ role.banner_url }}" alt="{{ role.name }}" class="recipe-image">
                   <div class="recipe-title">{{ role.name }}</div>
                 </div>
               </a>
