--- a/roles/templates/roles/details.html
+++ b/roles/templates/roles/details.html
@@ -4,23 +4,18 @@
           <article>
             </div>
               <h1>{{ role.name }}</h1>
-              <br><img src="{{ role.foto_url }}" alt="{{ role.name}}" class="recipe-image">
+              <br><img src="{{ role.banner_url }}" alt="{{ role.name}}" class="recipe-image">
               <h2><br> Descrição</h2>
-              {{ role.desc }}
-              <div class="listaDeIng">
-                  <h2>Ingredientes</h2>
-                  <ul>
-                    {{ role.ingredientes }}
-                  </ul>
-              </div>
-              <h2>Modo de preparo</h2>
-                    {{ role.modo_de_preparo }}
-              <h1>Bon appétit!</h1>
-              <h2>(Publicado em: {{role.date}}) </h2>
-              <br>
-              <a href="{% url 'roles:update' role.id %}"class="button1"><span></span>Editar</a>
-              <br><a href="{% url 'roles:delete' role.id %}"class="button1"><span></span>Apagar</a>
-          </article>
+              {{ role.about }}
+
+              <a href="{% url 'roles:tickets' role.id%}" class="btn btn-warning">Comprar</a>
+              
+              {% if user.is_authenticated %}
+                  <h2><br> Organização</h2>
+                  <a href="{% url 'roles:update' role.id %}"class="button1"><span></span>Editar</a>
+                  <br><a href="{% url 'roles:delete' role.id %}"class="button1"><span></span>Apagar</a>
+              {% endif %}
+          </article>  
       </section>
   </div>
   
