Media Query login, signup e header

--- a/static/css/cadastro.css
+++ b/static/css/cadastro.css
@@ -1,7 +1,8 @@
 .banner3 {
     width: 100%;
+    min-width: max-content;
     background-color: blueviolet;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('../images/list.jpeg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('../images/IAroles.jpeg');
     background-size: cover;
     background-position: center;
 }
@@ -21,6 +22,10 @@
     text-align: center;
     color:rgba(0, 0, 0, 0.75) !important;
     
+}
+
+ul {
+    list-style-type: none;
 }
 
 .cadastroForm{
@@ -72,4 +77,22 @@ article li{
     box-shadow: 0 0 35px #000000;
     transform: scale(1.1);
     
+}
+
+@media screen and (max-width: 1000px) {
+    .cadastro{
+        padding: 20px;
+        margin: 0 70px;
+    }
+    .cadastro h1{
+        font-size: 30px;
+        margin-bottom: 15px;
+    }
+    article p{
+        font-size: 15px;
+    }
+    article li{
+        font-size: 15px;
+        padding-left: 10px;
+    }
 }
