--- a/staticpages/templates/base.html
+++ b/staticpages/templates/base.html
@@ -25,7 +25,7 @@
     <header>
         <nav>
             <a href="{% url 'index' %}"> 
-                <img src="{% static '/images/logo.jpg'%}" alt="URolê" class="logo"> 
+                <img class="logo" src="{% static '/images/logo.jpg'%}" alt="URolê"> 
             </a>
             <ul>
                 {% if user.is_authenticated %}
